added robots txt file

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1607,6 +1607,9 @@ p.testimonials-name {
   width: 10px;
 }
 @media all and (max-width: 912px) {
+  .Banner_carouselcaption__NAlFf {
+    bottom: 5% !important;
+}
   .currentRate .easy-application {
     background-size: auto;
 }
@@ -1669,6 +1672,9 @@ p.testimonials-name {
   display: initial;
   margin-top: revert;
 }
+}
+.mobile-banner{
+  display: none;
 }
 @media all and (max-width: 768px) {
   .pagination {
@@ -1758,7 +1764,7 @@ p.testimonials-name {
     text-align: center;
   }
   .Banner_carouselcaption__NAlFf {
-    bottom: 10%;
+    // bottom: 10%;
     z-index: 999;
   }
   .works-container .works-title {
@@ -1788,8 +1794,37 @@ p.testimonials-name {
 .faq_section {
   background-size: contain;
 }
+.desktop-banner{
+  display: none;
 }
+.mobile-banner{
+  display: block;
+}
+.home-slider .carousel-indicators {
+  display: none;
+}
+.carousel-fade .carousel-item img{
+  height: 600px;
+}
+.slider-images span {
+  height: 600px !important;
+}
+}
+
 @media all and (max-width: 540px) {
+  
+  .carousel-fade .carousel-item img{
+    height: 450px;
+  }
+  .slider-images span {
+    height: 450px !important;
+  }
+  .wehelp_section {
+    padding: 30px 0;
+}
+  .Banner_carouselcaption__NAlFf {
+    bottom: 0% !important;
+}
   .meeting_section h2{
     font-size: 30px;
   }
@@ -1924,7 +1959,7 @@ p.testimonials-name {
 }
 
 @media all and (max-width: 441px) {
-  
+
   .cta_section .cta_first{
     height: 50vh
   }
@@ -1939,7 +1974,7 @@ p.testimonials-name {
   .Banner_carouselcaption__NAlFf {
       bottom: 0%;
       z-index: 999;
-      top: 50px;
+      top: 20%;
   }
   .meeting_image {
       display: none;
@@ -1959,15 +1994,13 @@ p.testimonials-name {
 .flexability-slider .carousel-inner {
  width: 100%;
 }
-.carousel-fade .carousel-item {
-  height: 400px;
-}
-.carousel-fade .carousel-item img{
-  height: 400px;
-}
-.slider-images > span {
-  position: inherit !important;
-}
+// .carousel-fade .carousel-item {
+//   height: 400px;
+// }
+
+// .slider-images > span {
+//   position: inherit !important;
+// }
 .flexability-slider .carouselcaption:before {
   left: -8px;
 }
