--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -2,13 +2,13 @@
 
 @import "scss/variables";
 
-/* .overlay {
+.overlay {
     background: rgba(0,0,0,0.5);
     width: 100%;
     height: 100%;
     z-index: 1;
     position: absolute;
-} */
+}
 
 .carouselcaption {
     bottom: 30%;
