--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -3,11 +3,12 @@
 @import "scss/variables";
 
 .overlay {
-    background: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.65);
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
-    position: absolute;
 }
 
 .carouselcaption {
