--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,14 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-right, butto
   width: 19px;
   display: block;
 }
+.overlay {
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .hero-title-col {
   position: relative;
   &:after {
