added news contents

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -957,6 +957,14 @@ textarea#comment {
     }
   }
 }
+.asim-post-meta{
+  font-size: 17px;
+  color: #8f8f8f;
+  font-weight: 600;
+  letter-spacing: 1px;
+  display: block;
+  padding-bottom: 20px;
+}
 
 .currentRate {
   .current-rate{
@@ -1960,9 +1968,6 @@ p.testimonials-name {
 }
 .Bc-Coquitlam .refinance-text p {
   font-size: 40px;
-}
-.faq_section {
-  background-image: url("") !important;
 }
 }
 
