--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -113,7 +113,8 @@ body {
       }
       ul.submenu {
         display: flex;
-        flex-direction: column;
+        justify-content: center;
+        text-align: center;
         position: absolute;
         left: 0;
         top: 100%;
@@ -128,6 +129,8 @@ body {
             padding: 13px;
             display: block;
             cursor: pointer;
+            text-align: center;
+            font-weight: bold;
             margin: 0;
             border-bottom: 2px solid $color-secondary;
             &:hover {
