--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1685,16 +1685,31 @@ q.review-content {
   align-items: center;
   justify-content: center;
 }
-p.review-name {
+
+.review-name {
   font-size: 15px;
-  margin-top: 15px;
   color: $color-secondary;
   font-weight: bold;
+  margin-top: 10px;
 }
 .review-carousel{
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.review-body{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 20px;
+}
+.review-img{
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 1px solid $color-secondary;
 }
 .review-box {
   margin-left: 25px;
